<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@android:color/white">

    <EditText
        android:id="@+id/et_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:hint="@string/input_tip3"
        android:padding="20dp"
        android:textSize="23sp"
        android:background="@drawable/rounded_edittext"
        android:elevation="2dp"/>

    <TextView
        android:id="@+id/tv_payMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/label_tv_payMoney"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_50"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:padding="15dp"
            android:text="@string/label_btn_50"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:background="@drawable/rounded_button_light"/>

        <Button
            android:id="@+id/btn_100"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:padding="15dp"
            android:text="@string/label_btn_100"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:background="@drawable/rounded_button_light"/>

        <Button
            android:id="@+id/btn_200"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:padding="15dp"
            android:text="@string/label_btn_200"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:background="@drawable/rounded_button_light"/>

        <Button
            android:id="@+id/btn_500"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:padding="15dp"
            android:text="@string/label_btn_500"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:background="@drawable/rounded_button_light"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="12dp"
        android:text="@string/label_btn_pay"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:background="@drawable/rounded_button"/>

</LinearLayout>

