<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@android:color/white">

    <EditText
        android:id="@+id/et_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:hint="@string/input_tip3"
        android:padding="18dp"
        android:background="@drawable/rounded_edittext"
        android:elevation="2dp"/>

    <Button
        android:id="@+id/btn_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:padding="15dp"
        android:text="@string/label_btn_query"
        android:textSize="20sp"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:minHeight="200dp"
        android:padding="16dp"
        android:text="@string/label_tv_result"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:elevation="2dp"/>
</LinearLayout>