<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="@android:color/white">

    <ImageView
        android:layout_width="193dp"
        android:layout_height="138dp"
        android:layout_gravity="center"
        android:layout_marginBottom="80dp"
        android:src="@drawable/welcome_image"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:hint="@string/input_tip1"
        android:inputType="phone"
        android:padding="16dp"
        android:background="@drawable/rounded_edittext"
        android:elevation="2dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/input_tip2"
            android:inputType="number"
            android:padding="16dp"
            android:background="@drawable/rounded_edittext"
            android:elevation="2dp"/>

        <Button
            android:id="@+id/btn_get_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/label_get_code"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:background="@drawable/rounded_button_light"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="16dp"
        android:text="@string/label_login"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:background="@drawable/rounded_button"/>

</LinearLayout>